# maia

./: README.md  srs.txt
backend/: database.db  pyproject.toml
backend/api/: config.py  main.py
backend/api/chats/: models.py  routers.py  service.py  tools.py
backend/api/core/: db.py
backend/api/security/: models.py  routers.py  service.py  settings.py  test.py
backend/api/therapists/: models.py  routers.py  service.py
backend/api/users/: models.py  routers.py  service.py
backend/prompts/: system_prompt_v1.txt
examples/: descartes.txt  patient_notes_1.txt  patient_notes_2.txt
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/dashboard/: page.tsx
frontend/app/dashboard/patients/[id]/: page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: landing-page.tsx  maia-logo.tsx
frontend/components/auth/: login-form.tsx  signup-form.tsx
frontend/components/chat/: chat-input.tsx  chat-interface.tsx  chat-messages.tsx  chat-sidebar.tsx  profile-dialog.tsx  therapist-panel.tsx
frontend/components/dashboard/: add-patient-dialog.tsx  alerts-list.tsx  dashboard-sidebar.tsx  patient-detail-view.tsx  patients-list.tsx  therapist-dashboard.tsx
frontend/lib/: api.ts  auth.ts
